PIRATAS - Add GUI integration